# jetson-installation

./: .gitignore  README.md  VNC  clean_jetson.sh  uninstall.sh
.github/workflows/: jetson-ROS-YOLO.yml  jetson-ansible-image.yml  jetson-nano-4gb  jetson-standard-images.yml
jetson-ROS-YOLO/: package.xml  setup.cfg  setup.py
jetson-ROS-YOLO/.github/workflows/: yolo_humble_amd64_arm64.yml  yolo_humble_j_nano.yml
jetson-ROS-YOLO/config/: yolo_ros_params.yaml
jetson-ROS-YOLO/docker/: Dockerfile  Dockerfile.jetson-nano  compose.amd64.yaml  compose.jnano.yaml  workspace_entrypoint.sh
jetson-ROS-YOLO/jetson-node/: node.py
jetson-ROS-YOLO/launch/: yolo.launch.py
jetson-ROS-YOLO/msg/: Detections.msg
jetson-ROS-YOLO/test/: __init__.py  test_node.py
jetson-ansible-image/: JETSON_mac_address.sh  create-image.sh  create-rootfs.sh  flash-image.sh  install.sh
jetson-docker-images/base-images/: foxy.Dockerfile
jetson-docker-images/minimal-images/: foxy_minimal.Dockerfile
jetson-docker-images/pytorch-images/: foxy_pytorch_1_13.Dockerfile
jetson-docker-images/ros-images/: humble_base.Dockerfile  humble_core.Dockerfile  (+2 more)
jetson-standard-images/: Containerfile.image.l4t32  Containerfile.image.l4t35  Containerfile.image.l4t36  Containerfile.rootfs.20_04  Containerfile.rootfs.22_04  Containerfile.rootfs.24_04
utilities/: SSH_tunnel.sh  clean_jetson.sh  install_HomeAssistant_supervised.sh  install_OpenCV_with_CUDA.sh  install_OpenVPN.sh  install_VS_CODE.sh  install_home_assistant_with_portainer.sh  install_homeassistant_core.sh  upgrade_VS_CODE.sh  upgrade_python3.sh
(+12 files in other folders)
