[metadata]
name = yolo_ros
version = 0.0.1
description = A ROS package for YOLO object detection integration.
long_description = file: README.md
long_description_content_type = text/markdown
author = Piotr
author_email = PiotrGapski96@gmail.com
license = MIT
url = https://github.com/yourusername/yolo_ros  # Replace with your repository URL if applicable

[options]
packages = find:
install_requires =
    setuptools
    rclpy
    sensor_msgs
    detection_msgs
    cv_bridge
    ultralytics
python_requires = >=3.7  # Specify the Python version you're targeting

[options.extras_require]
testing =
    pytest

[options.entry_points]
console_scripts =
    yolo_ros = yolo_ros.node:main

[options.package_data]
* = package.xml
* = launch/*.py
* = config/*.yaml

[options.data_files]
share/ament_index/resource_index/packages =
    resource/yolo_ros
share/yolo_ros =
    package.xml
share/yolo_ros/launch =
    launch/*.py
share/yolo_ros/config =
    config/*.yaml

[build_system]
requires =
    setuptools
    wheel
build-backend = setuptools.build_meta

[tool:pytest]
testpaths = tests
addopts = --maxfail=5 --disable-warnings -q

[develop]
script_dir = $base/lib/yolo_ros

[install]
install_scripts = $base/lib/yolo_ros
